hot damn, the edit page edits.

--- a/mycelium/apps/rewrite/templates/rewrite/base.html
+++ b/mycelium/apps/rewrite/templates/rewrite/base.html
@@ -44,6 +44,7 @@
   <script type="text/javascript" src="{{STATIC_URL}}js/rewrite/libs/css3-mediaqueries.js"></script>
 
   <script src="{{STATIC_URL}}js/rewrite/libs/nicEdit.js"></script>
+  <script src="{{STATIC_URL}}js/rewrite/libs/jquery.django.csrf.js"></script>
   <script src="{{STATIC_URL}}js/rewrite/rewrite.js"></script>
   <!--[if lt IE 7 ]>
     <script src="{{STATIC_URL}}js/rewrite/libs/dd_belatedpng.js"></script>
