editing blog and pages work

--- a/mycelium/apps/rewrite/templates/rewrite/base.html
+++ b/mycelium/apps/rewrite/templates/rewrite/base.html
@@ -24,6 +24,9 @@
   {% endblock %}
 
   {% block extra_head_html %}{% endblock %}
+  <script>
+  {% block js_urls %}{% endblock %}
+  </script>
 </head>
 
 <body>
