manage rewrite styling, edit template page

--- a/mycelium/apps/rewrite/static/css/rewrite/rewrite.css
+++ b/mycelium/apps/rewrite/static/css/rewrite/rewrite.css
@@ -47,4 +47,29 @@ body {
 	padding: 15px 2%;
 	background-color: #FFF;
 }
+sections {
+	display: block;
+}
+section {
+	display: block;
+}
+section page {
+	display: block;
+	margin-left: 10px;
+}
+section name {
 
+}
+section view {
+	float: right;
+	margin-right: 10px;
+}
+section delete {
+	float: right;
+}
+template {
+	display: block;
+}
+.CodeMirror {
+	border: 1px solid #AAA;
+}
