--- a/mycelium/apps/rewrite/templates/rewrite/manage/edit_template.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/edit_template.html
@@ -1,18 +1,6 @@
 {% extends "rewrite/manage/base.html" %}
 {% block js %}{{block.super}}
-	<script src="{{STATIC_URL}}js/rewrite/libs/codemirror.js"></script>
-	<link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/codemirror/codemirror.css">
-	<script src="{{STATIC_URL}}js/rewrite/libs/mode/javascript/javascript.js"></script>
-	<link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/codemirror/theme/default.css">
-	<script>
-		$(function(){
-			$("textarea").each(function(){
-				CodeMirror.fromTextArea($(this)[0], {
-  				// your settings here
-				});	
-			});
-		});
-	</script>
+	{% include "rewrite/manage/_code_textareas.html" %}
 {% endblock %}
 {% block manage_page_content %}
 	<a href="{% url rewrite:manage_templates %}">All Templates</a>
