--- a/mycelium/apps/rewrite/templates/rewrite/base.html
+++ b/mycelium/apps/rewrite/templates/rewrite/base.html
@@ -20,6 +20,7 @@
   <!-- The 1140px Grid - http://cssgrid.net/ -->
   <!--[if lte IE 9]><link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/ie.css" type="text/css" media="screen" /><![endif]-->
   <link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/1140.css" type="text/css" media="screen" />
+  <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.14/themes/base/jquery-ui.css" type="text/css" media="screen" />
   {# <link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/styles.css" type="text/css" media="screen" /> #}
   {% endblock %}
 
