--- a/mycelium/apps/rewrite/templates/rewrite/page.html
+++ b/mycelium/apps/rewrite/templates/rewrite/page.html
@@ -4,7 +4,7 @@
 {% block keywords %}{{page.keywords}}{% endblock %}
 {% block extra_head_html %}
 {% if request.user.is_authenticated %}<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/rewrite/rewrite-public.css">{% endif %}
-{{template.extra_head_html|safe}}
+{{template.extra_head_html|default_if_none:""|safe}}
 {% endblock %}
 {% block js_urls %}
 var urls = {};
@@ -25,14 +25,14 @@ urls.save_rewrite_page = "{% url rewrite:save_page page.pk %}"
 	</div>
 {% endif %}
     <header>
-  		{{ template.page_header_html|safe }}
+  		{{ template.page_header_html|default_if_none:""|safe }}
 	  	{# main navigation #}
 	  	{# section navigation #}
     </header>
     <div id="main" role="main">
-	  {{ template.pre_content_html|safe }}
-	  {% if request.user.is_authenticated %}<div id="rewrite_editable_body">{% endif %}{{ page.content|safe }}{% if request.user.is_authenticated %}</div>{% endif %}
-	  {{ template.post_content_html|safe }}
+	  {{ template.pre_content_html|default_if_none:""|safe }}
+	  {% if request.user.is_authenticated %}<div id="rewrite_editable_body">{% endif %}{{ page.content|default_if_none:""|safe }}{% if request.user.is_authenticated %}</div>{% endif %}
+	  {{ template.post_content_html|default_if_none:""|safe }}
 	  
     </div>
 {% endblock %}
