sorting appears to save

--- a/mycelium/apps/rewrite/templates/rewrite/base.html
+++ b/mycelium/apps/rewrite/templates/rewrite/base.html
@@ -10,8 +10,8 @@
   <meta name="description" content="{% block description %}{% endblock %}">
   <meta name="description" content="{% block keywords %}{% endblock %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="{{STATIC_URL}}/favicon.ico">
-  <link rel="apple-touch-icon" href="{{STATIC_URL}}/apple-touch-icon.png">
+  <link rel="shortcut icon" href="{{STATIC_URL}}favicon.ico">
+  <link rel="apple-touch-icon" href="{{STATIC_URL}}apple-touch-icon.png">
 
   <link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/style.css?v=2">
   <script src="{{STATIC_URL}}js/rewrite/libs/modernizr-1.7.min.js"></script>
