--- a/mycelium/apps/rewrite/static/css/rewrite/style.css
+++ b/mycelium/apps/rewrite/static/css/rewrite/style.css
@@ -43,7 +43,8 @@ ul, ol { margin-left: 2em; }
 ol { list-style-type: decimal; }
 nav ul, nav li { margin: 0; list-style:none; list-style-image: none; }
 small { font-size: 85%; }
-strong, th { font-weight: bold; }
+b, strong, th { font-weight: bold; }
+em, i { font-style: italic; }
 td { vertical-align: top; }
 sub, sup { font-size: 75%; line-height: 0; position: relative; }
 sup { top: -0.5em; }
