--- a/mycelium/apps/rewrite/templates/rewrite/base.html
+++ b/mycelium/apps/rewrite/templates/rewrite/base.html
@@ -15,7 +15,10 @@
 
   <link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/style.css?v=2">
   <script src="{{STATIC_URL}}js/rewrite/libs/modernizr-1.7.min.js"></script>
-	
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
+  <script>window.jQuery || document.write("<script src='{{STATIC_URL}}js/rewrite/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
+  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
+  
   {% block css %}
   <!-- The 1140px Grid - http://cssgrid.net/ -->
   <!--[if lte IE 9]><link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/ie.css" type="text/css" media="screen" /><![endif]-->
@@ -39,9 +42,7 @@
   </div>
 
   {% block js %}
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
-  <script>window.jQuery || document.write("<script src='{{STATIC_URL}}js/rewrite/libs/jquery-1.5.1.min.js'>\x3C/script>")</script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.15/jquery-ui.min.js"></script>
+
     
   <script src="{{STATIC_URL}}js/rewrite/plugins.js"></script>
   <script src="{{STATIC_URL}}js/rewrite/script.js"></script>
@@ -49,6 +50,7 @@
 
   <script src="{{STATIC_URL}}js/rewrite/libs/nicEdit.js"></script>
   <script src="{{STATIC_URL}}js/rewrite/libs/jquery.django.csrf.js"></script>
+  <script src="{{STATIC_URL}}js/rewrite/libs/jquery.hotkeys.js"></script>
   <script src="{{STATIC_URL}}js/rewrite/rewrite.js"></script>
   <!--[if lt IE 7 ]>
     <script src="{{STATIC_URL}}js/rewrite/libs/dd_belatedpng.js"></script>
