--- a/mycelium/apps/rewrite/templates/rewrite/page.html
+++ b/mycelium/apps/rewrite/templates/rewrite/page.html
@@ -24,6 +24,9 @@
 	<div id="rewrite_admin_bar">
 	{% block admin_bar %}
 		Admin Bar:
+		<form action="" method="POST" class="blog_post_form rewrite_associated_form">
+		{{page_form}}
+		</form>
 		{% include "rewrite/_admin_bar_save_and_editor.html" %}		
 
 	</div>
