blog fits in the template

--- a/mycelium/apps/rewrite/static/css/rewrite/rewrite.css
+++ b/mycelium/apps/rewrite/static/css/rewrite/rewrite.css
@@ -157,6 +157,13 @@ status {
 	float: right;
 	color: #AAA;
 }
+posts {
+	display: block;
+	margin-top: 10px;
+}
 posts post {
 	display: block;
+}
+.view_blog_btn {
+	float: right;
 }
