light formatting on the top bar

--- a/mycelium/apps/rewrite/templates/rewrite/blog_post.html
+++ b/mycelium/apps/rewrite/templates/rewrite/blog_post.html
@@ -11,7 +11,7 @@
 {% block admin_bar %}
 	Admin Bar:
 	<form action="" method="POST" class="blog_post_form rewrite_associated_form">
-	{{blog_post_form}}
+	{{blog_post_form.as_p}}
 	</form>
 	{% include "rewrite/_admin_bar_save_and_editor.html" %}		
 {% endblock %}
