--- a/mycelium/apps/rewrite/static/css/rewrite/rewrite-public.css
+++ b/mycelium/apps/rewrite/static/css/rewrite/rewrite-public.css
@@ -1,6 +1,7 @@
 #rewrite_admin_bar {
+	display: block;
 	width: 100%;	
-	height: 50px;
+	min-height: 50px;
 }
 #rewrite_editor {
 	/*display: none;*/
@@ -24,4 +25,13 @@
 }
 .rewrite_associated_form {
 	display: none;
+}
+#rewrite_admin_bar .helptext {
+	display: block;
+	font-size: 12px;
+	color: #AAA;
+}
+#rewrite_admin_bar .rewrite_associated_form p {
+	display: block;
+	padding: 10px;
 }
