--- a/mycelium/apps/rewrite/templates/rewrite/_admin_bar_save_and_editor.html
+++ b/mycelium/apps/rewrite/templates/rewrite/_admin_bar_save_and_editor.html
@@ -1,7 +1,7 @@
 <div class="edit_and_save_links">
-	<a href="#" class="edit_link">edit</a>
-	<a href="#" class="save_link save_links">save</a>
-	<a href="#" class="cancel_link save_links">cancel</a>
+	<a href="#" class="edit_link 			  ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"><span class="ui-button-text">Edit</span></a>
+	<a href="#" class="save_link save_links   ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"><span class="ui-button-text">Save</span></a>
+	<a href="#" class="cancel_link save_links ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"><span class="ui-button-text">Cancel</span></a>
 </div>
 
 <div id="rewrite_editor"></div>
