--- a/mycelium/apps/rewrite/templates/rewrite/blog_post.html
+++ b/mycelium/apps/rewrite/templates/rewrite/blog_post.html
@@ -10,6 +10,7 @@
 
 {% block admin_bar %}
 	Admin Bar:
+	<div class="rewrite_form_toggle_link"><icon class="ui-icon"></icon>Post Details</div>
 	<form action="" method="POST" class="blog_post_form rewrite_associated_form">
 	{{blog_post_form.as_p}}
 	</form>
