--- a/mycelium/apps/rewrite/templates/rewrite/page.html
+++ b/mycelium/apps/rewrite/templates/rewrite/page.html
@@ -24,6 +24,7 @@
 	<div id="rewrite_admin_bar">
 	{% block admin_bar %}
 		Admin Bar:
+		<div class="rewrite_form_toggle_link"><icon class="ui-icon"></icon>Page Details</div>
 		<form action="" method="POST" class="blog_post_form rewrite_associated_form">
 		{{page_form.as_p}}
 		</form>
