hide admin elements on load

--- a/mycelium/apps/rewrite/static/css/rewrite/rewrite-public.css
+++ b/mycelium/apps/rewrite/static/css/rewrite/rewrite-public.css
@@ -44,3 +44,10 @@
 	display: block;
 	float: left;
 }
+
+#rewrite_admin_bar .rewrite_form_toggle_link {
+	display: none;
+}
+#rewrite_admin_bar .rewrite_associated_form {
+	display: none;
+}
