new form simpler for templates

--- a/mycelium/apps/rewrite/static/css/rewrite/rewrite.css
+++ b/mycelium/apps/rewrite/static/css/rewrite/rewrite.css
@@ -68,7 +68,7 @@ section {
 section .pages {
 	padding: 10px;
 }
-section .page, post {
+section .page, post, template {
 	display: block;
 	margin: 1px 0px 1px 0px;
 	list-style: none;
