--- a/mycelium/apps/rewrite/templates/rewrite/manage/templates.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/templates.html
@@ -5,6 +5,7 @@
 		$(function(){
 			$( "section" ).sortable();
 			$( "section" ).disableSelection();
+			rewrite.manage.init();
 		});
 	</script>
 {% endblock %}
