--- a/mycelium/apps/rewrite/templates/rewrite/manage/templates.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/templates.html
@@ -10,7 +10,7 @@
 	</script>
 {% endblock %}
 {% block manage_page_content %}
-	
+	<instructions>Click on a template name to edit.</instructions>
 	<templates>
 	{% for t in templates %}
 		<template class="list_block ui-state-default ui-corner-all" >
