--- a/mycelium/apps/rewrite/templates/rewrite/manage/edit_template.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/edit_template.html
@@ -4,7 +4,26 @@
 {% endblock %}
 {% block manage_page_content %}
 	<a href="{% url rewrite:manage_templates %}">All Templates</a>
-	<form action="{% url rewrite:edit_template template.pk %}" method="POST">{% csrf_token %}
+	<instructions>To create or edit a template, you'll need at least some HTML. The sections below fit into the page like this:</instructions>
+	<pre>
+&lt;html&gt;
+   &lt;head&gt;
+      &lt;!-- Built-in head: HTML5 Boilerplate, jQuery, jQuery UI, 1140px --&gt;
+      &lt;!-- Extra head HTML --&gt;
+   &lt;/head&gt;
+   &lt;body&gt;
+      &lt;!-- Page Header HTML --&gt;
+      &lt;!-- Main navigation (if enabled) --&gt;
+      &lt;!-- Section navigation (if enabled) --&gt;
+      &lt;!-- Pre content HTML --&gt;
+      &lt;!-- Page/Blog Post Content --&gt;
+      &lt;!-- Post content HTML --&gt;
+   &lt;/body&gt;
+&lt;/html&gt;
+	</pre>
+
+
+	<form action="{% url rewrite:edit_template template.pk %}" method="POST" class="rewrite_edit_template">{% csrf_token %}
 		{{template_form.as_p}}
 		<input type="submit" />
 	</form>
