--- a/mycelium/apps/accounts/templates/accounts/manage_my_account.html
+++ b/mycelium/apps/accounts/templates/accounts/manage_my_account.html
@@ -26,6 +26,7 @@
 {% generic_editable_field_table useraccount_form.nickname "Preferred name:" %}
 {% generic_editable_field_table form.email %}
 {% generic_editable_field_table form.username %}
+{% generic_editable_field_table useraccount_form.timezone %}
 <tr class="generic_editable_field_table_row striped_row password_row" >
 	<td class="label_col"><label>Password:</label></td>
 	<td class="field_col">
