--- a/mycelium/apps/dashboard/templates/dashboard/dashboard.html
+++ b/mycelium/apps/dashboard/templates/dashboard/dashboard.html
@@ -95,6 +95,9 @@
 		</column_content>
 		</div>
 		{% endif %}
+		<column_header class="conversations">Recent Conversations</column_header>
+		{% include "dashboard/_recent_conversations.html" %}
+		
 		<column_header class="news">GoodCloud News</column_header>
 		{% include "dashboard/_goodcloud_news.html" %}
 	</td>
