--- a/mycelium/templates/mycelium_base.html
+++ b/mycelium/templates/mycelium_base.html
@@ -27,9 +27,9 @@ var GLOBAL_SEARCH_URL = "{% url core:search_results %}";
 	</main_nav>
 	<div id="global_search_results"><fragment name="global_search_results" action="replace"></fragment></div>
 	<side_nav>
-		{% if request.account.is_expired %}
+		{% if request.account.has_billing_issue %}
 			{% if request.useraccount.is_admin %}<a href="{% url accounts:manage_account %}" class="side_account_expired_link">{% endif %}
-			<div id="expired_side_bar">Account Expired</div>
+			<div id="expired_side_bar">Billing Problem</div>
 			{% if request.useraccount.is_admin %}</a>{% endif %}
 		{% endif %}
 		<div class="nav_title"></div>
